<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.AesthetX.aesthetx.Classes.Fragments.IntroFragments.IntroEightFragment"
    android:orientation="vertical"
    android:background="#000000">

    <TextView
        android:id="@+id/textViewactivitylevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activitylevel"
        android:textColor="#F5F5F5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:text="@string/sedentarytxt"
        android:textAlignment="viewEnd"
        android:textColor="#F5F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sedentarybutton"
        app:layout_constraintEnd_toStartOf="@+id/sedentarybutton"
        app:layout_constraintTop_toTopOf="@+id/sedentarybutton" />

    <Button
        android:id="@+id/sedentarybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:background="@drawable/add_button"
        android:text="@string/sedentary"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewactivitylevel"
        app:layout_constraintVertical_bias="0.037"
        android:paddingEnd="8sp"
        android:paddingStart="8sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lighttxt"
        android:textAlignment="viewEnd"
        android:textColor="#F5F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/lightbutton"
        app:layout_constraintEnd_toStartOf="@+id/lightbutton"
        app:layout_constraintTop_toTopOf="@+id/lightbutton"
        android:layout_marginEnd="15sp" />


    <Button
        android:id="@+id/lightbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/add_button"
        android:paddingStart="27sp"
        android:paddingEnd="27sp"
        android:text="@string/light"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sedentarybutton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moderatetxt"
        android:textAlignment="viewEnd"
        android:textColor="#F5F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/moderatebutton"
        app:layout_constraintEnd_toStartOf="@+id/moderatebutton"
        app:layout_constraintTop_toBottomOf="@+id/lightbutton"
        android:layout_marginEnd="15sp" />

    <Button
        android:id="@+id/moderatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moderate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightbutton"
        android:textColor="@color/colorAccent"
        android:background="@drawable/add_button"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="10sp"
        android:paddingStart="10sp"/>

    <Button
        android:id="@+id/heavybutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heavy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moderatebutton"
        android:textColor="@color/colorAccent"
        android:background="@drawable/add_button"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="24sp"
        android:paddingStart="24sp"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:text="@string/heavytxt"
        android:textAlignment="viewEnd"
        android:textColor="#F5F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/heavybutton"
        app:layout_constraintEnd_toStartOf="@+id/heavybutton"
        app:layout_constraintTop_toBottomOf="@+id/moderatebutton" />

    <Button
        android:id="@+id/athleticbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/athletic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heavybutton"
        android:textColor="@color/colorAccent"
        android:background="@drawable/add_button"
        android:layout_marginTop="8sp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="14sp"
        android:paddingStart="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/athletictxt"
        android:textAlignment="viewEnd"
        android:textColor="#F5F5F5"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/athleticbutton"
        app:layout_constraintEnd_toStartOf="@+id/athleticbutton"
        app:layout_constraintTop_toTopOf="@+id/athleticbutton"
        android:layout_marginEnd="15sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
