<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.AesthetX.aesthetx.Classes.StudentPromo">

    <EditText
        android:id="@+id/promocodein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8sp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8sp"
        android:backgroundTint="#F5F5F5"
        android:textColor="#33BAF8"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        android:hint="@string/enter_promo_code_here"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obtainpromo"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16sp"
        android:textAlignment="center"/>

<!--    <RadioGroup-->
<!--        android:id="@+id/year"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginEnd="16sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView17"-->
<!--        android:layout_marginTop="16sp">-->

    <RadioButton
        android:id="@+id/freshman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freshman"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <RadioButton
        android:id="@+id/sophomore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sophomore"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/freshman" />

    <RadioButton
        android:id="@+id/junior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/junior"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sophomore" />

    <RadioButton
        android:id="@+id/senior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senior"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/junior" />
<!--  ==-->

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promocodein"
        android:layout_marginTop="16sp"
        android:textSize="24sp"
        android:textColor="@color/textColorPrimary"
        />

    <Button
android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_green_button"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16sp"
        android:layout_marginBottom="16sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>